# subliminal-nightfall

./: .cloudflare-deploy-checklist.md  .gitignore  .mise.toml  DEPLOYMENT_INSTRUCTIONS.md  ICON_SETUP.md  LICENSE  MONOREPO.md  README.md  extension.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  theme.toml
.github/: DEPLOYMENT_SETUP.md
.github/workflows/: deploy-website.yml  publish-all.yml  publish.yml  zed-release.yml
cursor/: .gitignore  .vscodeignore  ICON_README.md  README.md  generate-icon.js  package.json
cursor/themes/: Subliminal-color-theme.json  subliminal-nightfall-color-theme-blurred.json  subliminal-nightfall-color-theme-hazy.json  subliminal-nightfall-color-theme.json
ghostty/: subliminal-nightfall  subliminal-nightfall-hazy
neovim/: README.md
neovim/colors/: subliminal-nightfall-blurred.lua  subliminal-nightfall-hazy.lua  subliminal-nightfall.lua
scripts/: verify-symlinks.sh
themes/: subliminal-nightfall.json  subliminal.json
tools/colorloom/: Cargo.toml
tools/colorloom/src/: main.rs  targets.rs
tools/themegen/: Cargo.toml
tools/themegen/src/: config.rs  main.rs  targets.rs
website/: DEPLOYMENT.md  QUICK_START.md  README.md  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  wrangler.toml
website/public/: _headers
website/src/code-samples/: example.go  example.rs  example.sh  example.swift  example.ts
website/src/components/: CodePreview.astro  ColorLoomShowcase.astro  ColorPalette.astro  Footer.astro  GSAPInit.astro  (+2 more)
zed/: README.md
zed/themes/: Subliminal.json  subliminal-nightfall.json
(+16 files in other folders)
