[package]
name = "colorloom"
version = "0.1.1"
edition = "2021"
description = "A theme generator for creating Subliminal Nightfall color schemes."
authors = ["Michael Hamrah"]
license = "MIT"
repository = "https://github.com/mhamrah/subliminal-nightfall"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
