[package]
name = "themegen"
version = "0.1.0"
edition = "2021"
description = "Subliminal Nightfall theme generator CLI"
authors = ["Michael Hamrah"]
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
